# Cub3d

./: CMakeLists.txt  Makefile  README.md  cub3d  main.c  main_b.c  main_bonus.c  test.c
hdrs/: cub3d.h  cub3d_bonus.h  libft.h
maps/: map.cub  map1.cub  map2.cub  map3.cub  map4.cub
srcs/: g_do_keys.c
srcs/3d/: L3d.h  draw_ceil.c  draw_ceil_and_floor.c  draw_floor.c  draw_lightning.c  draw_walls.c  draw_walls_test.c  draw_walls_test2.c  utils.c
srcs/input/: g_do_keys.c  key_utils.c  mouse_keys.c  mouse_pos.c
srcs/input_handle/: g_do_keys.c  mouse_pos.c
srcs/interface/: draw_battery_bar.c  draw_end_screen.c  draw_health_effect.c  draw_interface.c  draw_menu_screen.c  draw_start_screen.c
srcs/libft/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_clear_array.c  ft_itoa_uns.c  ft_lst_addback.c  ft_lstclear.c  ft_lstdelone.c  ft_lstnew.c  ft_lstsize.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strchr_count.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strncmp.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  get_next_line.c
srcs/minimap/: draw_minimap.c  draw_minimap_elements.c  draw_round_minimap.c  ray_cast.c  utils.c
srcs/parsing/: m_atoi.c  m_check_fname.c  m_check_map.c  m_check_param.c  m_clear_all.c  m_error.c  m_file_to_image.c  m_init_map.c  m_lst.c  m_pars.c  m_pars_map.c  m_pars_param.c  m_perror_r.c  m_rgb.c
srcs/ray_cast/: utils.c
srcs/rey_cast/: ray_cast.c
srcs_b/3d/: L3d.h  draw_ceil.c  draw_doors.c  draw_enemy.c  draw_floor.c  draw_walls.c  draw_walls_test2.c  get_color.c  ray_cast_for_tex.c  utils.c  utils2.c
srcs_b/enemy/: m_draw_enemy_minimap.c  m_enemy_action.c  m_enemy_atack.c  m_move_enemy.c  m_player_attack.c  utils.c
srcs_b/input/: g_do_keys.c  key_utils.c  mouse_keys.c  mouse_pos.c
srcs_b/interface/: draw_battery_bar.c  draw_end_screen.c  draw_health_effect.c  draw_interface.c  draw_menu_screen.c  draw_start_screen.c  draw_wand_and_light.c  utils.c
srcs_b/libft/: ft_atoi.c  ft_clear_array.c  ft_lst_addback.c  ft_lstclear.c  ft_lstsize.c  ft_memset.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strtrim.c  get_next_line.c
srcs_b/minimap/: draw_minimap_elements.c  draw_round_minimap.c  ray_cast.c  utils.c
srcs_b/parsing/: init_all.c  m_add_vilian.c  m_atoi.c  m_check_fname.c  m_check_map.c  m_check_param.c  m_clear_all.c  m_error.c  m_file_to_image.c  m_init_imgs.c  m_init_map.c  m_lst.c  m_pars.c  m_pars_map.c  m_pars_param.c  m_rgb.c
textures/: art1.xpm  art2.xpm  art3.xpm  back1.xpm  continue.xpm  door.xpm  exit.xpm  light.xpm  mossy.xpm  purplestone.xpm  redbrick.xpm  start_screen.xpm  wand.xpm  wood.xpm
